Fixed Bug in MultipleRelationship that was causing errors where the Relationship would not be setup with Criteria in certain circumstances.
Fixed bug in Criteria.IsMatch where trying to find Ismatch for Guid Proeprty where the value was null caused a null reference exception.

Fixed numerous compiler warnings

--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Grid\BOGridAndEditorControlWin.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Grid\DataGridViewImageColumnWin.cs" />
     <Compile Include="Grid\EditableGridControlWin.cs">
       <SubType>UserControl</SubType>
     </Compile>
