Fixed the Pin Button image

--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -306,6 +306,15 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pinoff_withcolour.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pinon_withcolour.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\headergradient.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
