--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -85,6 +85,7 @@
     <Compile Include="ButtonsControl\TestButtonGroupControl.cs" />
     <Compile Include="Controllers\TestBOColTabControlManager.cs" />
     <Compile Include="Grid\TestDataGridViewColumnCollection.cs" />
+    <Compile Include="Mappers\TestLookupComboBoxRelationshipMapper.cs" />
     <Compile Include="TestBOEditorControl_Generic.cs" />
     <Compile Include="TestBusinessObjectDeletor.cs" />
     <Compile Include="Controllers\TestListBoxCollectionManager.cs" />
