--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -307,13 +307,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\pinoff_withcolour.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\pinon_withcolour.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\headergradient.png" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
