--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -114,6 +114,8 @@
     <Compile Include="Loaders\TestXmlFilterLoader.cs" />
     <Compile Include="Loaders\TestXmlSimpleLookupListLoader.cs" />
     <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Aggregation.cs" />
+    <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Association.cs" />
+    <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Base.cs" />
     <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Composition.cs" />
     <Compile Include="TestBOObjectID.cs" />
     <Compile Include="TestBOPropInteger.cs" />
@@ -314,10 +316,6 @@
     <ProjectReference Include="..\Habanero.Test\Habanero.Test.csproj">
       <Project>{B965CBBC-48BE-4761-9AB8-8F1AD17B8537}</Project>
       <Name>Habanero.Test</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Habanero.UI.Win\Habanero.UI.Win.csproj">
-      <Project>{E761E05B-B9CC-4EAC-B940-C19E42D3819C}</Project>
-      <Name>Habanero.UI.Win</Name>
     </ProjectReference>
     <ProjectReference Include="..\Habanero.Util\Habanero.Util.csproj">
       <Project>{D3B50C81-590B-429F-9761-3B676D607DFF}</Project>
