Made BusinessObject.IsValid obsolete - use Status.IsValid instead. Fixed some compiler warnings (mostly to do with HashCodes not being overridden when Equals was) Fixed bug in RelationshipComboBoxMapper

--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -41,6 +41,7 @@
       <HintPath>..\..\lib\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
