--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -96,6 +96,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BOError.cs" />
+    <Compile Include="BOPropCol.cs" />
     <Compile Include="BOPropLookupList.cs" />
     <Compile Include="BORegistry.cs" />
     <Compile Include="BOStatus.cs" />
