Removed ClassName and TableName from BusinessObject because they get in the way.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -347,6 +347,7 @@
     </Compile>
     <Compile Include="SqlGeneration\DeleteStatementGenerator.cs" />
     <Compile Include="SqlGeneration\InsertStatementGenerator.cs" />
+    <Compile Include="SqlGeneration\StatementGeneratorUtils.cs" />
     <Compile Include="SqlGeneration\UpdateStatementGenerator.cs" />
     <Compile Include="SupportsAutoIncrementingFieldBO.cs" />
     <Compile Include="TransactionalBusinessObject.cs" />
