Fixed Bug In BusinessObject where a BusinessObject that is part of a MultipleRelationship and is removed from this and added to another Relationship. If the BusinessObject is then cancelled it was not resetting the foreign key to the original values. Added the ability to add a collapsible panel to the CollapsiblePanelGroupControl (previously you could only add a content control to the CollapsiblePanelGroupControl). Added Interface and Inheritors to the SplitContainer added the creation of this control to the IControlFactory. Carried out some minor refactorings on MenuBuilder.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -127,11 +127,13 @@
     </Compile>
     <Compile Include="Selectors\BOGridAndEditorControl.cs" />
     <Compile Include="TestGroupBox.cs" />
+    <Compile Include="TestMainMenu.cs" />
     <Compile Include="TestMessageBoxConfirmer.cs" />
     <Compile Include="TestNumericUpDown.cs" />
     <Compile Include="TestPictureBox.cs" />
     <Compile Include="TestProgressBar.cs" />
     <Compile Include="TestRadioButton.cs" />
+    <Compile Include="TestSplitContainer.cs" />
     <Compile Include="TestSplitter.cs" />
     <Compile Include="TestTabControl.cs" />
     <Compile Include="TestTabPage.cs" />
