--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -83,6 +83,7 @@
     <Compile Include="ControlInterfaces\IListViewItem.cs" />
     <Compile Include="ControlInterfaces\IListViewItemCollection.cs" />
     <Compile Include="ControlInterfaces\IPictureBox.cs" />
+    <Compile Include="ControlInterfaces\ISplitContainer.cs" />
     <Compile Include="ControlInterfaces\IStaticDataEditor.cs" />
     <Compile Include="ControlInterfaces\IUserControlHabanero.cs" />
     <Compile Include="ControlMappers\DateTimePickerMapper.cs" />
