--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -202,6 +202,9 @@
     <Compile Include="RadioButtonVWG.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="SplitContainerVWG.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="SplitterVWG.cs">
       <SubType>Component</SubType>
     </Compile>
