--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -75,6 +75,10 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Db4objects.Db4o, Version=7.4.88.12908, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Db4objects.Db4o.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=5.1.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\MySql.Data.dll</HintPath>
@@ -286,6 +290,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="TransactionCommitters\TestTransactionCommitterDB.cs" />
+    <Compile Include="TransactionCommitters\TestTransactionCommitterDB4O.cs" />
     <Compile Include="TransactionCommitters\TestTransactionCommitterFactory.cs" />
     <Compile Include="TransactionCommitters\TestTransactionCommitterHelper.cs" />
     <Compile Include="TransactionCommitters\TestTransactionCommitterInMemory.cs" />
