--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -197,6 +197,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="PropertyLink.cs" />
+    <Compile Include="PropRuleDouble.cs" />
+    <Compile Include="PropRuleSingle.cs" />
     <Compile Include="QueryBuilder.cs" />
     <Compile Include="ReadOnlyDataSetProvider.cs">
       <SubType>Code</SubType>
