Added CollapsibleMenu with all related classes to Win and Web -- TODO: Still need to do Images for the Win version. Fixed Bug in BusinessObjectLoaderInMemory where the BusinessObject Type was being used as the load instead of the ClassDef This was causing problems with the Fourth Normal form database stuff where all classes are Entity but have different classDefs. Added a FindAll to DataStoreInMemory which uses the ClassDef to support the above.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -88,6 +88,8 @@
     </Compile>
     <Compile Include="ButtonsControl\TestButtonGroupControl.cs" />
     <Compile Include="Controllers\TestBOColTabControlManager.cs" />
+    <Compile Include="TestCollapsibleMenu.cs" />
+    <Compile Include="TestCollapsibleMenuBuilder.cs" />
     <Compile Include="Grid\TestDataGridViewColumnCollection.cs" />
     <Compile Include="Mappers\TestLookupComboBoxRelationshipMapper.cs" />
     <Compile Include="TestBusinessObjectDeletor.cs" />
@@ -130,7 +132,9 @@
     </Compile>
     <Compile Include="Selectors\BOGridAndEditorControl.cs" />
     <Compile Include="TestGroupBox.cs" />
+    <Compile Include="TestMainEditorPanel.cs" />
     <Compile Include="TestMainMenu.cs" />
+    <Compile Include="TestMainTitleIconControl.cs" />
     <Compile Include="TestMessageBoxConfirmer.cs" />
     <Compile Include="TestNumericUpDown.cs" />
     <Compile Include="TestPictureBox.cs" />
