Introduced a DTO for DB4O, got all the tests working again.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -99,6 +99,7 @@
     <Compile Include="BOKeyEventArgs.cs" />
     <Compile Include="BOPropEventArgs.cs" />
     <Compile Include="BOPropUpdatedEventArgs.cs" />
+    <Compile Include="BusinessObjectDTO.cs" />
     <Compile Include="InvalidRelationshipNameException.cs" />
     <Compile Include="Criteria\Criteria.cs" />
     <Compile Include="Criteria\CriteriaDB.cs" />
