Moved the DB tests into the Habanero.Test.DB project

--- a/source/Habanero.Db/Habanero.Db.csproj
+++ b/source/Habanero.Db/Habanero.Db.csproj
@@ -183,6 +183,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="SelectQueryDB.cs" />
+    <Compile Include="SourceDB.cs" />
     <Compile Include="SqlFormattingHelper.cs" />
     <Compile Include="SqlStatement.cs">
       <SubType>Code</SubType>
