Implemented IBusinessObjectRule that can be added to the BusinessObject.BusinessObjectRules and is validated with Status.IsValid and Status.HasWarnings Removed or fixed many todo's Removed Classes such as PropRuleObject that are not being used.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -100,6 +100,7 @@
     <Compile Include="BOPropEventArgs.cs" />
     <Compile Include="BOPropUpdatedEventArgs.cs" />
     <Compile Include="BusinessObjectDTO.cs" />
+    <Compile Include="IBusinessObjectRule.cs" />
     <Compile Include="InvalidRelationshipNameException.cs" />
     <Compile Include="Criteria\Criteria.cs" />
     <Compile Include="Criteria\CriteriaExpression.cs" />
