--- a/source/Habanero.Test.General/App.config
+++ b/source/Habanero.Test.General/App.config
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
 	<configSections>
-		<section name="DatabaseConfig" type="System.Configuration.DictionarySectionHandler" />
+		<section name="DatabaseConfig" type="System.Configuration.DictionarySectionHandler"/>
 	 </configSections>
 	 
   <appSettings>
 		<!--<add key="DBConnectString" value="data source=Core;database=WorkShopManagement;uid=sa;pwd=;" /> -->
 	</appSettings>
 	                     	
-	<DatabaseConfig vendor="SQLServer" server="Core" database="WorkShopManagement" username="sa" password="" port="" />
+	<DatabaseConfig vendor="SQLServer" server="Core" database="WorkShopManagement" username="sa" password="" port=""/>
 		
-</configuration>
+<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
