--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -142,6 +142,7 @@
     <Compile Include="TestTabControl.cs" />
     <Compile Include="TestTabPage.cs" />
     <Compile Include="TestTreeView.cs" />
+    <Compile Include="TestTreeViewController.cs" />
     <Compile Include="TestUserControl.cs" />
     <Compile Include="Grid\TestDataGridViewNumericUpDownColumn.cs" />
     <Compile Include="TestBaseMethods.cs" />
