Testing the MultiSelectorModel if the Available Options when selected are returned in the order they are selected. Creating a Utility Class used by IBOEditorControl to provide common functionality for windows and VWG.

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BOColTabControlManager.cs" />
+    <Compile Include="BOEditorControlUtils.cs" />
     <Compile Include="BOSelectorAndBOEditorManager.cs" />
     <Compile Include="CollapsiblePanelGroupManager.cs" />
     <Compile Include="CollapsiblePanelManager.cs" />
